Java 17/Spark 3.3.0.