@@ -36,9 +36,130 @@ task unpackTestJar(type: Copy){
     }
 }
 
+test {
+    jvmArgs = [
+            '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.io=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.net=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.nio=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.util=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.util.concurrent=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.util.concurrent.atomic=ALL-UNNAMED',
+            '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED',
+            '--add-opens', 'java.base/sun.nio.cs=ALL-UNNAMED',
+            '--add-opens', 'java.base/sun.security.action=ALL-UNNAMED',
+            '--add-opens', 'java.base/sun.util.calendar=ALL-UNNAMED',
+            '--add-opens', 'java.base/sun.nio.fs=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.nio.channels.spi=ALL-UNNAMED',
+
+            // required for tests
+            '--add-opens', 'java.base/jdk.internal.ref=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.lang.ref=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.util.zip=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.util.jar=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.nio.file.attribute=ALL-UNNAMED',
+            '--add-opens', 'java.base/jdk.internal.loader=ALL-UNNAMED',
+            '--add-opens', 'java.base/sun.net.www.protocol.jar=ALL-UNNAMED',
+            '--add-opens', 'java.base/sun.invoke.util=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.util.concurrent.locks=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.security=ALL-UNNAMED',
+            '--add-opens', 'java.base/sun.reflect.annotation=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.text=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.nio.charset=ALL-UNNAMED',
+            '--add-opens', 'java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED',
+            '--add-opens', 'java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED',
+            '--add-opens', 'java.management/javax.management=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.util.regex=ALL-UNNAMED',
+            '--add-opens', 'java.base/sun.util.locale=ALL-UNNAMED',
+            '--add-opens', 'java.base/jdk.internal.math=ALL-UNNAMED',
+            '--add-opens', 'java.xml/com.sun.xml.internal.stream.util=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.time=ALL-UNNAMED',
+            '--add-opens', 'java.base/sun.reflect.generics.factory=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.nio.channels=ALL-UNNAMED',
+            '--add-opens', 'java.base/sun.security.util=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.time.zone=ALL-UNNAMED',
+            '--add-opens', 'java.base/sun.reflect.generics.scope=ALL-UNNAMED',
+            '--add-opens', 'java.base/sun.reflect.generics.tree=ALL-UNNAMED',
+            '--add-opens', 'java.management/com.sun.jmx.interceptor=ALL-UNNAMED',
+            '--add-opens', 'java.management/javax.management.openmbean=ALL-UNNAMED',
+            '--add-opens', 'java.management/sun.management=ALL-UNNAMED',
+            '--add-opens', 'jdk.management/com.sun.management.internal=ALL-UNNAMED',
+            '--add-opens', 'jdk.management.jfr/jdk.management.jfr=ALL-UNNAMED',
+            '--add-opens', 'jdk.jfr/jdk.jfr.internal.management=ALL-UNNAMED',
+            '--add-opens', 'java.base/jdk.internal.module=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.lang.module=ALL-UNNAMED',
+            '--add-opens', 'java.prefs/java.util.prefs=ALL-UNNAMED', // jacoco
+
+            '-Dio.netty.tryReflectionSetAccessible=true'
+    ]
+    jacoco {
+        jvmArgs = [
+                '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.io=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.net=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.nio=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.util=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.util.concurrent=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.util.concurrent.atomic=ALL-UNNAMED',
+                '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED',
+                '--add-opens', 'java.base/sun.nio.cs=ALL-UNNAMED',
+                '--add-opens', 'java.base/sun.security.action=ALL-UNNAMED',
+                '--add-opens', 'java.base/sun.util.calendar=ALL-UNNAMED',
+                '--add-opens', 'java.base/sun.nio.fs=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.nio.channels.spi=ALL-UNNAMED',
+
+                // required for tests
+                '--add-opens', 'java.base/jdk.internal.ref=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.lang.ref=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.util.zip=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.util.jar=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.nio.file.attribute=ALL-UNNAMED',
+                '--add-opens', 'java.base/jdk.internal.loader=ALL-UNNAMED',
+                '--add-opens', 'java.base/sun.net.www.protocol.jar=ALL-UNNAMED',
+                '--add-opens', 'java.base/sun.invoke.util=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.util.concurrent.locks=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.security=ALL-UNNAMED',
+                '--add-opens', 'java.base/sun.reflect.annotation=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.text=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.nio.charset=ALL-UNNAMED',
+                '--add-opens', 'java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED',
+                '--add-opens', 'java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED',
+                '--add-opens', 'java.base/javax.management=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.util.regex=ALL-UNNAMED',
+                '--add-opens', 'java.base/sun.util.locale=ALL-UNNAMED',
+                '--add-opens', 'java.base/jdk.internal.math=ALL-UNNAMED',
+                '--add-opens', 'java.xml/com.sun.xml.internal.stream.util=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.time=ALL-UNNAMED',
+                '--add-opens', 'java.base/sun.reflect.generics.factory=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.nio.channels=ALL-UNNAMED',
+                '--add-opens', 'java.base/sun.security.util=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.time.zone=ALL-UNNAMED',
+                '--add-opens', 'java.base/sun.reflect.generics.scope=ALL-UNNAMED',
+                '--add-opens', 'java.base/sun.reflect.generics.tree=ALL-UNNAMED',
+                '--add-opens', 'java.management/com.sun.jmx.interceptor=ALL-UNNAMED',
+                '--add-opens', 'java.management/javax.management.openmbean=ALL-UNNAMED',
+                '--add-opens', 'java.management/sun.management=ALL-UNNAMED',
+                '--add-opens', 'jdk.management/com.sun.management.internal=ALL-UNNAMED',
+                '--add-opens', 'jdk.management.jfr/jdk.management.jfr=ALL-UNNAMED',
+                '--add-opens', 'jdk.jfr/jdk.jfr.internal.management=ALL-UNNAMED',
+                '--add-opens', 'java.base/jdk.internal.module=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.lang.module=ALL-UNNAMED',
+                '--add-opens', 'java.prefs/java.util.prefs=ALL-UNNAMED', // jacoco
+
+                '-Dio.netty.tryReflectionSetAccessible=true'
+        ]
+    }
+}
+
 task testOnPackagedReleaseJar(type: Test){
     String testClassesJar = "$System.env.TEST_JAR"
+
     String testDependencyJar = "$System.env.TEST_DEPENDENCY_JAR"
+
     String gatkJar = "$System.env.GATK_JAR"
     String testClassesUnpacked = "$System.env.CP_DIR"
 
@@ -60,7 +181,64 @@ task testOnPackagedReleaseJar(type: Test){
         classpath.each {println it}
     }
 
-    classpath = files( gatkJar, testDependencyJar, testClassesJar)
+    jvmArgs = [
+            '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.io=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.net=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.nio=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.util=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.util.concurrent=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.util.concurrent.atomic=ALL-UNNAMED',
+            '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED',
+            '--add-opens', 'java.base/sun.nio.cs=ALL-UNNAMED',
+            '--add-opens', 'java.base/sun.security.action=ALL-UNNAMED',
+            '--add-opens', 'java.base/sun.util.calendar=ALL-UNNAMED',
+            '--add-opens', 'java.base/sun.nio.fs=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.nio.channels.spi=ALL-UNNAMED',
+            '--add-opens', 'java.base/jdk.internal.ref=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.lang.ref=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.util.zip=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.util.jar=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.nio.file.attribute=ALL-UNNAMED',
+            '--add-opens', 'java.base/jdk.internal.loader=ALL-UNNAMED',
+            '--add-opens', 'java.base/sun.net.www.protocol.jar=ALL-UNNAMED',
+            '--add-opens', 'java.base/sun.invoke.util=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.util.concurrent.locks=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.security=ALL-UNNAMED',
+            '--add-opens', 'java.base/sun.reflect.annotation=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.text=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.nio.charset=ALL-UNNAMED',
+            '--add-opens', 'java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED',
+            '--add-opens', 'java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED',
+            '--add-opens', 'java.management/javax.management=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.util.regex=ALL-UNNAMED',
+            '--add-opens', 'java.base/sun.util.locale=ALL-UNNAMED',
+            '--add-opens', 'java.base/jdk.internal.math=ALL-UNNAMED',
+            '--add-opens', 'java.xml/com.sun.xml.internal.stream.util=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.time=ALL-UNNAMED',
+            '--add-opens', 'java.base/sun.reflect.generics.factory=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.nio.channels=ALL-UNNAMED',
+            '--add-opens', 'java.base/sun.security.util=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.time.zone=ALL-UNNAMED',
+            '--add-opens', 'java.base/sun.reflect.generics.scope=ALL-UNNAMED',
+            '--add-opens', 'java.base/sun.reflect.generics.tree=ALL-UNNAMED',
+            '--add-opens', 'java.management/com.sun.jmx.interceptor=ALL-UNNAMED',
+            '--add-opens', 'java.management/javax.management.openmbean=ALL-UNNAMED',
+            '--add-opens', 'java.management/sun.management=ALL-UNNAMED',
+            '--add-opens', 'jdk.management/com.sun.management.internal=ALL-UNNAMED',
+            '--add-opens', 'jdk.management.jfr/jdk.management.jfr=ALL-UNNAMED',
+            '--add-opens', 'jdk.jfr/jdk.jfr.internal.management=ALL-UNNAMED',
+            '--add-opens', 'java.base/jdk.internal.module=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.lang.module=ALL-UNNAMED',
+            '--add-opens', 'java.security.jgss/sun.security.krb5=ALL-UNNAMED',
+            '--add-opens', 'java.prefs/java.util.prefs=ALL-UNNAMED', // jacoco
+
+            '-Dio.netty.tryReflectionSetAccessible=true'
+    ]
+
+    classpath = files( gatkJar, testClassesJar, testDependencyJar)
     testClassesDirs = files(testClassesUnpacked)
 }
 
